# YapTap

./: .gitignore  AGENT.md  Cargo.toml  Makefile  PRD.md  SPECS.md
.claude/: settings.local.json
PRD/: PRD_1.json  PRD_10.json  PRD_11.json  PRD_12.json  PRD_13.json  PRD_14.json  PRD_2.json  PRD_3.json  PRD_4.json  PRD_5.json  PRD_6.json  PRD_7.json  PRD_8.json  PRD_9.json
assets/: Info.plist
claude/prompts/: 10_build_prompt.txt  11_extend_specs.txt  12_build_PRD_8.txt  13_build_prompt_3.txt  14_improve_code.txt  3_build_PRD.txt  4_build_prompt.txt  5_extend_specs.txt  6_build_PRD_2.txt  7_build_prompt_2.txt  8_extend_specs.txt  9_build_PRD_3.txt  ARCHIVE_build_specs.txt  build_prompt.txt  build_rules.txt  build_specs.txt  plan_prompt.txt
claude/rules/: active-subagent-logging.mdc  auto-git-commit.mdc  mdc-rule-location.mdc  no-secrets.mdc  prd-tasks.mdc  prompt-files.mdc  python-ai-intent-comments.mdc  python-async.mdc  python-config.mdc  python-datastructures.mdc  python-docs.mdc  python-errors.mdc  python-imports.mdc  python-logging.mdc  python-no-placeholders.mdc  python-performance.mdc  python-project-architecture.mdc  python-security.mdc  python-style.mdc  python-testing.mdc  python-typing.mdc  python-unittest.mdc  rust-async.mdc  rust-datastructures.mdc  rust-errors.mdc  rust-iterators.mdc  rust-macros.mdc  (+8 more)
specs/: architecture.md  audio-recording.md  cli.md  config.md  hotkey.md  llm.md  menubar.md  packaging.md  prompts.md  roadmap.md  transcription.md
src/: app.rs  audio.rs  config.rs  hotkey.rs  keychain.rs  llm.rs  main.rs  transcription.rs
(+10 files in other folders)
