[package]
name = "yaptap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yaptap"
path = "src/main.rs"

[dependencies]
cpal = "0.15"
hound = "3.5"
tempfile = "3"
anyhow = "1"
ctrlc = { version = "3", features = ["termination"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
